--- a/templates/nav_template.hbs
+++ b/templates/nav_template.hbs
@@ -42,7 +42,7 @@
             <i class="fa fa-caret-down" id="caret_down_3"></i>
         </a>
         <div id="dropdown_content_3" class="dropdown-content">
-            <a href="#">Log Out</a>
+            <a id="log_out_btn">Log Out</a>
             <a href="./profile_page.html">Settings</a>
         </div>
     </div>
