Added code to make the add course work

--- a/templates/nav_template.hbs
+++ b/templates/nav_template.hbs
@@ -19,8 +19,8 @@
         </a>
         <div id="dropdown_content_1" class="dropdown-content">
             <a href="#">See all books</a>
-            <a href="#">Add a book</a>
-            <a href="#">Edit a book</a>
+            <a href="../pages/add_book_page.html">Add a book</a>
+            <a href="../pages/edit_book_page.html">Edit a book</a>
         </div>
     </div>
     <div id="dropdown_2" class="dropdown">
@@ -29,9 +29,9 @@
             <i class="fa fa-caret-down" id="caret_down_2"></i>
         </a>
         <div id="dropdown_content_2" class="dropdown-content">
-            <a href="#">See all courses</a>
-            <a href="#">Add a course</a>
-            <a href="#">Edit a course</a>
+            <a href="../pages/courses_page.html">See all courses</a>
+            <a href="../pages/add_course_page.html">Add a course</a>
+            <a href="../pages/edit_course_page.html">Edit a course</a>
         </div>
     </div>
 
