--- a/css/add_course_or_book.css
+++ b/css/add_course_or_book.css
@@ -52,11 +52,6 @@ input::placeholder {
     opacity: 0.4;
 }
 
-#courses_container {
-    /*display: flex;*/
-    /*flex: 1;*/
-}
-
 #book_pic_input,
 #profile_pic_input {
     background-color: white;
@@ -66,6 +61,21 @@ input::placeholder {
     margin-top: 1em;
     display: flex;
     justify-content: center;
+    background-color: red;
+    width:100px;
+    height:100px;
+    border-radius: 50%;
+    align-self: center;
+    overflow: hidden;
+}
+
+#current_profile_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    align-self: center;
+    justify-self: center;
+
 }
 
 #form_title {
