--- a/templates/books_list.hbs
+++ b/templates/books_list.hbs
@@ -4,11 +4,11 @@
         <div class="book_container">
             <div class="book_info_container">
                 <div class="book_img_container">
-                    <img src="{{coverImage}}" alt="Book cover picture" class="book_cover_img" />
+                    <img src="../{{cover_picture}}" alt="Book cover picture" class="book_cover_img" />
                 </div>
                 <div class="book_info">
                     <p class="book_title">{{title}}</p>
-                    <p class="book_info_text">ISBN {{isbn}}</p>
+                    <p class="book_info_text">ISBN {{ISBN}}</p>
                     <p class="book_info_text">{{authors}}</p>
                     <div class="book_rating_container">
                         <div class="stars_container">{{{renderStars rating}}}</div>
