module and books checkpoint.

--- a/templates/course_dropdown.hbs
+++ b/templates/course_dropdown.hbs
@@ -1,6 +1,6 @@
 <select class="form_input" name="course" id="course">
     <option value="" disabled selected hidden>Course</option>
     {{#each courses}}
-    <option value="{{courseId}}">{{courseId}} {{courseName}}</option>
+    <option value="{{id}}">{{module_code}} {{name}}</option>
     {{/each}}
 </select>
