--- a/templates/nav_template.hbs
+++ b/templates/nav_template.hbs
@@ -32,6 +32,7 @@
             <a href="../pages/courses_page.html">See all courses</a>
             <a href="../pages/add_course_page.html">Add a course</a>
             <a href="../pages/edit_course_page.html">Edit a course</a>
+            <a href="../pages/add_book_to_course.html">Add book to course</a>
         </div>
     </div>
 
