--- a/templates/add_book_to_course.hbs
+++ b/templates/add_book_to_course.hbs
@@ -18,9 +18,7 @@
             </div>
 
             <div class="book_btns_container">
-                <button type="button" class="review_book_btn button_green button" data-id="{{id}}">Review Book</button>
-                <a href="#" class="see_reviews_btn button button_blue" data-id="{{id}}"> See Reviews </a>
-                <button type="button" class="delete_book_btn button button_red" data-id="{{id}}">Delete Book</button>
+                <button type="button" class="add_book_btn button_green button" data-id="{{id}}">Add book</button>
             </div>
         </div>
     </li>
