--- a/templates/add_book_to_course.hbs
+++ b/templates/add_book_to_course.hbs
@@ -16,9 +16,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="book_btns_container">
-                <button type="button" class="add_book_btn button_green button" data-id="{{id}}">Add book</button>
+                <button type="button" class="{{../className}} button_green button" data-id="{{id}}">{{../btnName}}</button>
             </div>
         </div>
     </li>
