--- a/templates/nav_template.hbs
+++ b/templates/nav_template.hbs
@@ -18,9 +18,8 @@
             <i class="fa fa-caret-down" id="caret_down_1"></i>
         </a>
         <div id="dropdown_content_1" class="dropdown-content">
-            <a href="#">See all books</a>
+            <a href="../pages/books_page.html">See all books</a>
             <a href="../pages/add_book_page.html">Add a book</a>
-            <a href="../pages/edit_book_page.html">Edit a book</a>
         </div>
     </div>
     <div id="dropdown_2" class="dropdown">
