--- a/templates/books_list.hbs
+++ b/templates/books_list.hbs
@@ -19,8 +19,7 @@
 
             <div class="book_btns_container">
                 <button type="button" class="review_book_btn button_green button" data-id="{{id}}">Review Book</button>
-                <a href="#" class="see_reviews_btn button button_blue" data-id="{{id}}"> See Reviews </a>
-                <button type="button" class="delete_book_btn button button_red" data-id="{{id}}">Delete Book</button>
+                <button type="button" class="see_reviews_btn button button_blue" data-id="{{id}}"> See Reviews</button>
             </div>
         </div>
     </li>
