--- a/templates/suggest_book_modal.hbs
+++ b/templates/suggest_book_modal.hbs
@@ -37,7 +37,7 @@
         <input type="text" class="form_input" id="edition_input" placeholder="1st Edition" />
     </div>
     <div class="form_submit">
-        <button id="submit_btn" onclick="" type="submit" class="button_green button">Submit</button>
-        <button id="cancel_btn" onclick="" type="button" class="button button_red">Cancel</button>
+        <button id="submit_btn" type="submit" class="button_green button">Submit</button>
+        <button id="cancel_btn" type="button" class="button button_red">Cancel</button>
     </div>
 </form>
