--- a/css/courses_and_books.css
+++ b/css/courses_and_books.css
@@ -55,11 +55,11 @@
 }
 
 .delete_book_btn {
-    display: none;
+    /* display: none; */
 }
 
 .button {
-    font-size: 20px;
+    font-size: calc(12px + 1vw);
 }
 
 @media screen and (min-width: 701px) {
