--- a/templates/edit_review_modal.hbs
+++ b/templates/edit_review_modal.hbs
@@ -18,7 +18,7 @@
         >
     </div>
     <div class="modal_btn_container">
-        <button id="submit_edit_review" class="button button_green" type="submit">Update</button>
+        <button id="submit_edit_review" class="button button_green" data-userId="{{userId}}" type="submit">Update</button>
         <button id="cancel_edit_review" class="button button_gray" type="button">Cancel</button>
     </div>
 </form>
