small fixes, date in reviews, review profile image, logo link to courses

--- a/templates/nav_template.hbs
+++ b/templates/nav_template.hbs
@@ -1,4 +1,4 @@
-<a href="#" class="logo">
+<a href="../pages/courses_page.html" class="logo">
     <img id="logo" src="../imgs/logos/uol_logo.svg" alt="University of London logo" />
     <!--<a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by kmg design - Flaticon</a>-->
 </a>
