added remove book page, haven't implemented the functionality yet

--- a/templates/books_list.hbs
+++ b/templates/books_list.hbs
@@ -22,7 +22,7 @@
                 {{#if ../isStudent}}
                     <button type="button" class="review_book_btn button_green button" data-id="{{id}}" data-name="{{title}}">Review Book</button>
                 {{else}}
-                    <button type="button" class="delete_book_btn button button_red" data-id="{{id}}">Delete Book</button>
+                    <button type="button" class="delete_book_btn button button_red" data-id="{{id}}">Remove Book</button>
                 {{/if}} 
             </div>
         </div>
