--- a/css/review_page.css
+++ b/css/review_page.css
@@ -154,6 +154,11 @@
     padding: 2em 2em;
 }
 
+.visible_empty_list {
+    margin-bottom: 1em;
+    margin-top: 3em;
+}
+
 @media screen and (min-width: 701px) {
     #review_list_container {
         width: 90%;
