--- a/templates/suggest_book_modal.hbs
+++ b/templates/suggest_book_modal.hbs
@@ -1,4 +1,4 @@
-<form id="suggest_a_book_form" class="form_box" action="#" method="POST">
+<form id="suggest_a_book_form" class="form_box">
     <div class="form_row">
         <p id="modal_title">Suggest a book</p>
     </div>
