--- a/css/course_page.css
+++ b/css/course_page.css
@@ -2,9 +2,6 @@
     padding-bottom: 2em;
 }
 
-
-
-
 #new_review_form {
     display: flex;
     flex-direction: column;
@@ -46,8 +43,6 @@
     margin-top: 1em;
 }
 
-
-
 @media screen and (min-width: 701px) {
     #upper_container {
         display: flex;
@@ -87,6 +82,10 @@
     }
 
     #confirm_remove {
+        margin-right: 1em;
+    }
+
+    #book_title_h2 {
         margin-right: 1em;
     }
 }
