--- a/templates/proposed_books.hbs
+++ b/templates/proposed_books.hbs
@@ -1,29 +1,16 @@
 <ul id="books_list">
     {{#each books}}
-    <li book-title="{{title}}" book-isbn="{{ISBN}}" book-authors="{{authors}}">
+    <li data-name="{{name}}" data-code="{{module_code}}">
         <div class="book_container">
             <div class="book_info_container">
-                <div class="book_img_container">
-                    <img src="../{{cover_picture}}" alt="Book cover picture" class="book_cover_img" />
-                </div>
                 <div class="book_info">
-                    <p class="book_title">{{title}}</p>
-                    <p class="book_info_text">ISBN {{ISBN}}</p>
-                    <p class="book_info_text">{{authors}}</p>
-                    <div class="book_rating_container">
-                        <div class="stars_container">{{{renderStars rating}}}</div>
-                        <p class="book_info_text">{{rating}}</p>
-                    </div>
+                    <p class="book_info_text"><b>Course</b>: {{module_code}}-{{name}}</p>
+                    <p class="book_info_text"><b>Book title</b>: {{title}}</p>
+                    <p class="book_info_text"><b>ISBN</b>: {{ISBN}}</p>
                 </div>
             </div>
-
             <div class="book_btns_container">
-                <a class="see_reviews_btn button button_blue" data-id="{{id}}">See Reviews</a>
-                {{#if ../isStudent}}
-                    <button type="button" class="review_book_btn button_green button" data-id="{{id}}" data-name="{{title}}">Review Book</button>
-                {{else}}
-                    <button type="button" class="remove_book_btn button button_red" data-id="{{id}}">Remove Book</button>
-                {{/if}} 
+                <button type="button" class="remove_book_btn button button_red" data-id="{{id}}">Remove Book</button>
             </div>
         </div>
     </li>
